Fixed UI jump issue. Added hand on hover

--- a/css/customStyles.css
+++ b/css/customStyles.css
@@ -17,6 +17,7 @@
     padding-right: 5px;
     padding-bottom: 5px;
     padding-left: 15px;
+    cursor: pointer;
 }
 .divSelected {
     background: #A9A9A9;
